# sw1dto2d

./: AUTHORS  LICENSE  README.md  pyproject.toml  pytest.ini  setup.cfg  setup.py  sw1dto2d.py
.github/workflows/: cicd.yml
examples/brahmaputra/: brahmaputra_example.py  centerline.dbf  centerline.shp  centerline.shx
examples/garonne/: Garonne2019_results.csv  Garonne2019_results_selection.csv  centerline.dbf  centerline.shp  centerline.shx  clean.sh  garonne_example.py
sw1dto2d/: __init__.py  cartesian.py  sw1dto2d.py
tests/: test_basic_processes.py  test_brahmaputra.py  test_garonne.py
tests/data/brahmaputra/: brahmaputra_results.csv
unit_tests/: test_basic_processes.py
