[project]
name = "sw1dto2d"
description = "Tool to convert results of a 1D Shallow Water model to 2D geometries"
readme = "README.md"
requires-python = ">=3.7"
license = {file = "LICENSE"}
authors = [
  {email = "kevin.larnier@csgroup.eu"},
  {name = "Kevin Larnier"}
]
maintainers = [
  {name = "Kevin Larnier", email = "kevin.larnier@csgroup.eu"}
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python"
]

dependencies = [
  "geopy",
  "matplotlib",
  "numpy",
  "pyproj",
  "shapely",
  "fiona",
  "pandas"]

