[project]
name = "sw1dto2d"
description = "Tool to convert results of a 1D Shallow Water model to 2D geometries"
readme = "README.md"
version = "0.0.5"
requires-python = ">=3.8"
license = {file = "LICENSE"}
authors = {file = "AUTHORS"}
maintainers = [
  "Kevin Larnier <kevin.larnier@hydro-matters.fr>"
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python"
]

dependencies = [
  "geopy",
  "matplotlib",
  "numpy",
  "pyproj",
  "shapely",
  "fiona",
  "pandas"]
