[project]
name = "sw1dto2d"
description = "Tool to convert results of a 1D Shallow Water model to 2D geometries"
readme = "README.md"
dynamic = ["version"]
requires-python = ">=3.8"
license = {file = "LICENSE"}
authors = [
  {email = "kevin.larnier@hydro-matters.fr"},
  {name = "Kevin Larnier"}
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python"
]

dependencies = [
  "geopy",
  "matplotlib",
  "numpy",
  "pyproj",
  "shapely",
  "fiona",
  "pandas",
  "typing_extensions"]

[project.optional-dependencies]
dev = [
  "pytest"
]
