# package setup main metadata
[metadata]
name = sw1dto2d
author = Kevin Larnier
author_email = kevin.larnier@csgroup.eu
url =
project_urls =
    Source =
    Documentation =
description = Tool to convert results of a 1D Shallow Water model to 2D geometries
long_description = file:README.md
long_description_content_type = text/markdown
license = Apache License 2.0
license_files = LICENSE
platform = any
keywords: 
classifiers =
    Development Status :: 4 - Beta
    Intended Audience :: Developers
    Intended Audience :: End Users/Desktop
    Intended Audience :: Science/Research
    Environment :: Console
    Topic :: Software Development :: Libraries :: Python Modules
    License :: OSI Approved :: Apache Software License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8

[options]
python_requires = >=3.6

setup_requires =
    setuptools_scm # Following https://pypi.org/project/setuptools-scm/

# shareloc packages dependencies
install_requires = 
    geopy
    matplotlib
    numpy
    pyproj
    shapely
    fiona==1.8.22
    pandas

package_dir =
    . = sw1dto2d
packages = find:

[options.extras_require]
# [dev] mode dependencies: include notebook and doc
dev =
    pytest
    pytest-cov
    pytest-timestamper
    pre-commit
    isort>=5.8.0                  # Check imports
    black>=21.5b0                 # PEP8 format code
    flake8<6.0.0                  # General linter
    flake8-copyright>=0.2.2       # Check copyrights
    flake8-comprehensions>=3.4.0  # Check list/dict/set
    flake8-bugbear>=21.4.3        # Add some rules to flake8
    pylint                        # General linter with more rules
    setuptools_scm                # version from git tag
    virtualenv
    configupdater
    twine                         # for pypi upload
    sphinx                        # for doc
    sphinx-rtd-theme              # for doc
    build

# [doc] mode dependencies
doc =
    sphinx
    sphinx-rtd-theme

# [notebook] mode dependencies
notebook =
    jupyterlab

# Specify no universal wheel supported (only Python3)
[bdist_wheel]
universal = false

# Flake8 configuration
[flake8]
exclude = .git, venv, build, dist,
# Add flake8 ignored rules
ignore =
# from black compatibility
extend-ignore = E203, W503
max-complexity = 15
max-line-length = 120
#show-source = true
# Flake8-copyright
copyright-check = True
# errors types are not selected by default, so add them to your selection
select = E,F,W,C,B9,C4,B
